--- a/glossario.html
+++ b/glossario.html
@@ -6,3 +6,43 @@ title: glossário | 字汇
 {% for item in site.glossario %}
 		<div class="conteudo"><h2><a href="{{ item.url | relative_url }}">{{ item.name }}</a></h2></div>
 {% endfor %}
+
+{% for item in site.outras %}
+		<div class="conteudo"><h2><a href="{{ item.url | relative_url }}">{{ item.name }}</a></h2></div>
+{% endfor %}
+
+{% for item in site.hsk1 %}
+		<div class="conteudo"><h2><a href="{{ item.url | relative_url }}">{{ item.name }}</a></h2></div>
+{% endfor %}
+
+{% for item in site.hsk2 %}
+		<div class="conteudo"><h2><a href="{{ item.url | relative_url }}">{{ item.name }}</a></h2></div>
+{% endfor %}
+
+{% for item in site.hsk3 %}
+		<div class="conteudo"><h2><a href="{{ item.url | relative_url }}">{{ item.name }}</a></h2></div>
+{% endfor %}
+
+{% for item in site.hsk4 %}
+		<div class="conteudo"><h2><a href="{{ item.url | relative_url }}">{{ item.name }}</a></h2></div>
+{% endfor %}
+
+{% for item in site.hsk5 %}
+		<div class="conteudo"><h2><a href="{{ item.url | relative_url }}">{{ item.name }}</a></h2></div>
+{% endfor %}
+
+{% for item in site.hsk6 %}
+		<div class="conteudo"><h2><a href="{{ item.url | relative_url }}">{{ item.name }}</a></h2></div>
+{% endfor %}
+
+{% for item in site.outras %}
+		<div class="conteudo"><h2><a href="{{ item.url | relative_url }}">{{ item.name }}</a></h2></div>
+{% endfor %}
+
+{% for item in site.classes-gramaticais %}
+		<div class="conteudo"><h2><a href="{{ item.url | relative_url }}">{{ item.name }}</a></h2></div>
+{% endfor %}
+
+{% for item in site.radicais %}
+		<div class="conteudo"><h2><a href="{{ item.url | relative_url }}">{{ item.name }}</a></h2></div>
+{% endfor %}
