Initial GitHub pages site with Jekyll

--- a/_textos/luxun-um-pequeno-incidente.html
+++ b/_textos/luxun-um-pequeno-incidente.html
@@ -29,6 +29,59 @@ proximo: 大连丸上 | no s.s. dairen maru
             </div>
         </div>
 
+<div class="dropdown">
+<span class="dropbtn">感受</span>
+<div class="dropdown-content">
+<div>
+<span class="hovertext-pinyin">gǎnshòu</span>
+</div>
+<span class="hovertext-pt"> sentir, perceber, experimentar </span><br>
+<a class="hovertext-link" href="{site.baseurl}/hsk5/感受" target="blank">ver no glossário</a>
+</div>
+</div>
+<div class="dropdown">
+<span class="dropbtn">思考</span>
+<div class="dropdown-content">
+<div>
+<span class="hovertext-pinyin">sīkǎo</span>
+</div>
+<span class="hovertext-pt"> refletir sobre, ponderar, pensar cuidadosamente </span><br>
+<a class="hovertext-link" href="{site.baseurl}/hsk5/思考" target="blank">ver no glossário</a>
+</div>
+</div>
+<div class="dropdown">
+<span class="dropbtn">包括</span>
+<div class="dropdown-content">
+<div>
+<span class="hovertext-pinyin">bāokuò</span>
+</div>
+<span class="hovertext-pt"> incluir, envolver, incorporar </span><br>
+<a class="hovertext-link" href="{site.baseurl}/hsk5/包括" target="blank">ver no glossário</a>
+</div>
+</div>
+<div class="dropdown">
+<span class="dropbtn">制造</span>
+<div class="dropdown-content">
+<div>
+<span class="hovertext-pinyin">zhìzào</span>
+</div>
+<span class="hovertext-pt"> fabricar, fazer, manufaturar </span><br>
+<a class="hovertext-link" href="{site.baseurl}/hsk5/制造" target="blank">ver no glossário</a>
+</div>
+</div>
+<div class="dropdown">
+<span class="dropbtn">二胡</span>
+<div class="dropdown-content">
+<div>
+<span class="hovertext-pinyin">èrhú</span>
+</div>
+<span class="hovertext-pt"> erhu, instrumento tradicional chinês, com duas cordas e tocado com arco </span><br>
+<a class="hovertext-link" href="{site.baseurl}/outras/二胡" target="blank">ver no glossário</a>
+</div>
+</div>
+
+
+
         <span class="hovertext"  pinyin-hover="wǒ" pt-hover="eu">我</span>
         <span class="hovertext"  pinyin-hover="cóng" pt-hover= "desde, a partir de, de (referindo-se a lugar ou tempo)">从</span>
         <span class="hovertext"  pinyin-hover="xiāngxia" pt-hover= "campo, área rural">乡下</span>
