Initial GitHub pages site with Jekyll

--- a/_textos/luxun-um-pequeno-incidente.html
+++ b/_textos/luxun-um-pequeno-incidente.html
@@ -8,7 +8,7 @@ proximo: 大连丸上 | no s.s. dairen maru
 ---
 <body>
 <div>
-<h4><a>baixar pdf</a></h4>
+<!-- <h4><a>baixar pdf</a></h4> -->
 </div>
 
 <article>
