--- a/_textos/luxun-um-pequeno-incidente.html
+++ b/_textos/luxun-um-pequeno-incidente.html
@@ -7,8 +7,11 @@ anterior:
 proximo: 大连丸上 | no s.s. dairen maru
 ---
 <body>
-<div>
+<div class="audio">
 <!-- <h4><a>baixar pdf</a></h4> -->
+	<audio controls>
+		<source src="/zhengshidu/assets/audios/luxun-um-pequeno-incidente.mp3" type="audio/mpeg">
+	</audio>
 </div>
 
 <article>
