Initial GitHub pages site with Jekyll

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@ title: zheng shi du
 <!--	<h1><a href="/zhengshidu/home.html">literatura chinesa e literatura brasileira<br>中国巴西文学</a></h1> -->
 </center>
 
+<center>
 <div class="authors-index-grid">
 
 	{% for author in site.authors %}
@@ -42,6 +43,7 @@ title: zheng shi du
   {% endfor %}
 	</div> -->
 </div>
+</center>
 </main>
 
 </body>
