--- a/glossario.html
+++ b/glossario.html
@@ -5,7 +5,7 @@ title: glossário | 字汇
 
 <h1>hsk 1</h1>
 {% for item in site.hsk1 %}
-		<div class="conteudo"><h2><a href="{{ item.url | relative_url }}">{{ item.name }}</a></h2></div>
+		<div class="conteudo"><h2><a href="{{ item.url | relative_url }}">{{ item.name }}</a></h2>{{ item.content | truncatewords: 5 }}</div>
 {% endfor %}
 
 <h1>hsk 2</h1>
